--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,16 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile rootProject.ext.appCompat
+    compile rootProject.ext.cardView
+    compile rootProject.ext.designCompat
+
     testCompile 'junit:junit:4.12'
+
+    compile project(':coverflow')
+    compile 'me.relex:circleindicator:1.2.1@aar'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
@@ -37,4 +46,10 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.github.moondroid.coverflow:library:1.0'
+
+    compile files('libs/apache-mime4j-0.6.jar')
+    compile files('libs/httpclient-4.2.3.jar')
+    compile files('libs/httpcore-4.2.3.jar')
+    compile files('libs/httpmime-4.0.1.jar')
+    compile files('libs/urlimageviewhelper-1.0.4.jar')
 }
