--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,11 +61,13 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".ui.activities.signups.SignInActivity"
@@ -85,8 +87,6 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-
-
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/title_activity_main" />
@@ -123,7 +123,6 @@
         <activity
             android:name=".ui.activities.ProfileActivity"
             android:label="@string/title_activity_profile" />
-
         <activity
             android:name=".ui.activities.SwipeActivity"
             android:label="@string/app_name"
@@ -131,9 +130,11 @@
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--<activity android:name=".ui.activities.ProfileLandingActivity"></activity>-->
     </application>
 
 </manifest>
