--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,16 +49,11 @@ dependencies {
     compile rootProject.ext.appCompat
     compile rootProject.ext.cardView
     compile rootProject.ext.designCompat
-
     testCompile 'junit:junit:4.12'
-
     compile project(':coverflow')
-
     compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
         transitive = true;
     }
-
-
     compile files('libs/apache-mime4j-0.6.jar')
     compile files('libs/httpclient-4.2.3.jar')
     compile files('libs/httpcore-4.2.3.jar')
@@ -86,4 +81,5 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v13:23.4.0'
+    compile files('libs/org-apache-commons-lang.jar')
 }
