--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,13 +117,13 @@
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize"></activity>
         <activity
-            android:name=".ui.activities.client.AddClientActivity"
+            android:name=".ui.activities.client.ClientActivity"
             android:label="@string/app_name"
             android:parentActivityName=".ui.activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize"></activity>
         <activity
-            android:name=".ui.activities.ViewSchedule"
+            android:name=".ui.activities.schedule.ViewSchedule"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
@@ -135,7 +135,12 @@
             <!-- </intent-filter> -->
         </activity>
         <activity
-            android:name=".ui.activities.schedule.SelectClientActivity"
+            android:name=".ui.activities.client.SelectClientActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+            android:name=".ui.activities.schedule.CreateApointmentActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
