--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
 repositories {
+    maven { url "https://jitpack.io" }
     maven { url 'https://maven.fabric.io/public' }
 }
 
@@ -83,4 +84,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v13:23.4.0'
+
+    compile 'com.github.johnhiott:DarkSkyApi:v0.1.4'
 }
