--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,6 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
-
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
@@ -55,6 +54,7 @@ dependencies {
     compile('com.twitter.sdk.android:twitter-core:1.3.1@aar') {
         transitive = true;
     }
+
     compile files('libs/apache-mime4j-0.6.jar')
     compile files('libs/httpclient-4.2.3.jar')
     compile files('libs/httpcore-4.2.3.jar')
@@ -84,6 +84,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:support-v13:23.4.0'
-
     compile 'com.github.johnhiott:DarkSkyApi:v0.1.4'
+    compile 'com.github.tittojose:timerangepicker-library:0.2'
 }
