--- a/coverflow/build.gradle
+++ b/coverflow/build.gradle
@@ -25,6 +25,6 @@ allprojects {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile rootProject.ext.supportV4
 }
