- cleaned up revenue

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+                android:name=".ui.activities.lines.LineRevenueActivity"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".ui.activities.sales.ActivityAddSales"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
