Schedule, Map, Client, Filter, Line, Client Profile, Sale

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
           android:largeHeap="true">
 
     <uses-sdk
+            android:minSdkVersion="16"
             android:targetSdkVersion="23" />
 
     <uses-feature
