--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,12 @@
                 android:theme="@style/AppTheme.NoActionBar"
                 android:windowSoftInputMode="adjustResize" />
         <activity
+                android:name=".ui.activities.WebviewActivity"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:windowSoftInputMode="adjustResize" />
+        <activity
                 android:name=".ui.activities.privacy.ActivityPrivacySetting"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait"
