- Fixed bug with select line activity - add swipe to refress - heed client upload when editing client

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -146,6 +146,13 @@
                 android:screenOrientation="portrait"
                 android:theme="@style/AppTheme.NoActionBar"
                 android:windowSoftInputMode="adjustResize" />
+
+        <activity
+                android:name=".ui.activities.ActivityMaintenance"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                android:theme="@style/AppTheme.NoActionBar"
+                android:windowSoftInputMode="adjustResize" />
         <activity
                 android:name=".ui.activities.sales.ActivityGroupedSales"
                 android:label="@string/app_name"
